# cuda-doctor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cuda_doctor/: cli.py
include/commands/: check.hpp  doctor.hpp  validate.hpp
include/core/: configure.hpp  cuda_env.hpp  driver.hpp  gpu.hpp  platform.hpp  process.hpp  repo.hpp  report.hpp
src/: main.cpp
src/commands/: check.cpp  doctor.cpp  validate.cpp
src/core/: configure.cpp  cuda_env.cpp  driver.cpp  gpu.cpp  platform.cpp  process.cpp  repo.cpp
tests/python/: test_cli.py
